Overflow, fixes, route

--- a/app/css/over-ons.css
+++ b/app/css/over-ons.css
@@ -1,5 +1,4 @@
 html {
-  overflow-y: scroll;
   overflow-x: hidden; }
 
 p {
