--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,6 +1,5 @@
 @import 'colors.scss';
 html {
-  overflow-y: scroll;
   overflow-x: hidden;
 }
 
