--- a/app/scss/papierblok.scss
+++ b/app/scss/papierblok.scss
@@ -156,7 +156,6 @@
   .cabanelf-main {
     left: 30vw;
     max-width: 80vw;
-    overflow-y: hidden;
   }
   .tekst-papier-titel {
     margin-top: 90px;
